package ambiente;

public class ForaMapaException extends Exception {
    public ForaMapaException(String message) {
        super(message);
    }
    
}
