@startuml
!theme plain
skinparam class {
    BackgroundColor<<Exception>> #FF9999
    BackgroundColor<<Class>> #D5E8D4
}

package ambiente #CCF2FF {
    class Ambiente {
        - dimensões: int x int x int
        - nome: String
        - umidade: int
        - entidades: ArrayList<Entidade>
        - mapa: TipoEntidade[][][]
        - centralComunicacao: CentralComunicacao
        + inicializaMapa()
        + visualizarAmbiente()
        + moverRoboMapa()
        + handleColisoes()
        + adicionarEntidade()
        + removerEntidade()
    }

    class ForaMapaException <<Exception>> {}
}

' External references
interface "Entidade" as Entidade #A9DCDF
class "TipoEntidade" as TipoEntidade #FFD966
class "Robo" as Robo #DAF7A6
class "Obstaculo" as Obstaculo #FFF2CC
class "CentralComunicacao" as CentralComunicacao #FFE6CC

' Relationships
Ambiente "1" *-- "entidades *" Entidade
Ambiente "1" *-- "mapa" TipoEntidade
Ambiente "1" o-- "1" CentralComunicacao
Ambiente ..> ForaMapaException
Ambiente ..> Robo: uses
Ambiente ..> Obstaculo: uses
@enduml